# Rift

./: Cargo.toml  README.md
data/: dev.rift.launcher.desktop.in
scripts/: install-dev-desktop-entry.sh
src/: app.rs  config.rs  main.rs  model.rs  theme.rs
src/app/: animation.rs  css.rs  mod.rs  settings.rs  shortcuts.rs  terminal.rs  welcome.rs
src/model/: app_index.rs  calculator.rs  history.rs  mod.rs  ranking.rs  result.rs
